# msty_algo_classes

./: .gitignore  CMakeLists.txt  Results.xlsx  main.c
helpers/: helper.c  helpers.h
menu/: menu.c  menu.h
search/binary/: binary.c  binary.h
search/linear/: linear.c  linear.h
sorting/bubble/: bubble.c  bubble.h
sorting/merge/: merge.c  merge.h
sorting/selection/: selection.c  selection.h
